--- a/blue-green/values.yaml
+++ b/blue-green/values.yaml
@@ -14,10 +14,10 @@ replicaCount: 1
 
 ingress:
   hostname: demo-tp.arch-travel-vpc-dl-clus-a792dcf5b234b1b0f6b2c5d50c6dd863-0000.us-south.containers.appdomain.cloud
-  stagehostname: beta.demo-tp.arch-travel-vpc-dl-clus-a792dcf5b234b1b0f6b2c5d50c6dd863-0000.us-south.containers.appdomain.cloud
+  betahostname: beta.demo-tp.arch-travel-vpc-dl-clus-a792dcf5b234b1b0f6b2c5d50c6dd863-0000.us-south.containers.appdomain.cloud
 
 
 
 index: hello world
-index_green: hello world green
-index_blue: hello world blue
+index_green: hello world green from nginx 1.19.2
+index_blue: hello world blue from nginx 1.19.1
